# Credit-calculator

./: .gitignore  README.md  base_credit_calculator.py  credit_calculator.py  credit_calculators.py  pyproject.toml  serializers.py
tests/: test_credit_calculator.py  test_input_serializer.py
