[tool.poetry]
name = "credit_calc"
version = "0.1.0"
description = "Calculator for loans"
authors = ["AligatorVodaema <ignatev.vsevolod@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
python-Levenshtein = "^0.12.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
